# polyBot-Weather

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  run_simulation.py
polybot/: __init__.py  config.py  main.py  models.py  runner.py
polybot/connectors/: __init__.py  copy_trading.py  noaa.py  polymarket.py  pyth.py
polybot/core/: __init__.py  datastore.py  risk_manager.py  simulation.py
polybot/dashboard/: app.py
polybot/strategies/: __init__.py  binary_arb.py  crypto.py  weather.py  weather_v2.py
scripts/: run_dashboard.sh  setup.sh
tests/: test_models.py  test_risk_manager.py  test_strategies.py
